atualização dos forms

--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -5,6 +5,11 @@
 
 */
 
+
+/*
+    As partes de baixo é para estilização
+    dos campos de um formulario.
+*/
 .campo{
     width: 100%;
     min-width: 300px;
@@ -20,6 +25,26 @@
 .campo input{
     margin-top: 5px;
     display: block;
-    width: 100px;
+    width: 100%;
     font-size: 18px;
+}
+
+/*
+    As classes abaixo é para 
+    os diferentes formularios
+*/
+
+.pequeno{
+    width: 30%;
+    background-color: #fff;
+}
+
+.medio{
+    width: 50%;
+    background-color: #fff;
+}
+
+.grande{
+    width: 75%;
+    background-color: #fff;
 }
